# Milan_Hackathon

./: .gitignore  README.md  Summarizer.py  model.py
ML/Sentiment/: Sentiment_Analyzer.py
ML/Summarizer/: Summarizer.py
backend/: pyproject.toml  routes.txt
backend/backend/: main.py  queries.sql  schema.sql  utils.py
frontend/components/: Header.js
frontend/pages/: index.js
frontend/pages/movie/: [id].js
