[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["srynsh <suryaansh2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
google-auth = "^2.22.0"
aiosql = "^9.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
